Adds text to main body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <p>sakdfha[iefhfdsak;fha''''fldkjhoaihf;kdjsnaskfdh a;sdhf'oasihfo'ias nas;doihfoiasd]</p>
 
     <script type="text/javascript" src="scripts.js"></script>
   </body>
